tests/specs/ecosystem/sxzz/ast_kit/0_11_3.test
sxzz/ast-kit/0.11.3
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2344 [ERROR]: Type 'T' does not satisfy the constraint 'File | Expression'.
  Type 'T' is not assignable to type 'YieldExpression'.
export type ParseResult<T> = _ParseResult<T> & {
                                          ^
    at file://<tmpdir>/src/parse.ts:3:43

TS2208 [ERROR]:     This type parameter might need an `extends t.YieldExpression` constraint.
    export type ParseResult<T> = _ParseResult<T> & {
                            ^
        at file://<tmpdir>/src/parse.ts:3:25TS2208 [ERROR]:     This type parameter might need an `extends t.File | t.Expression` constraint.
    export type ParseResult<T> = _ParseResult<T> & {
                            ^
        at file://<tmpdir>/src/parse.ts:3:25

error: Type checking failed.

